--- a/More than one site/sites.html
+++ b/More than one site/sites.html
@@ -27,7 +27,7 @@
         <li style="font-size: 20px;"><a href="./sites.html">Links</a></li>        
     </ul>
 
-    <p style="font-size:30px;"> <strong>Here are some Movies: </strong> </p>
+    <p style="font-size:30px; color: rgb(205, 241, 241); text-align: center;"><u><strong>Here are some Movies </strong></u> </p>
     
 <ol>
     <li><a href="https://www4.fbox.to/movie/spider-man-no-way-home-9j1m0/1-full"><h3>Spider-Man: No Way Home</h3></a>
