--- a/More than one site/about.html
+++ b/More than one site/about.html
@@ -23,12 +23,13 @@
  
 <body>
             <header style="color:white" >About Our page</header>
-    <ul>
-        <li style="font-size: 20px;"><a href="./index.html">Home</a></li>
-        <li style="font-size: 20px;"><a href="./about.html">About</a></li>
-        <li style="font-size: 20px;"><a href="./sites.html">Links</a></li> 
-</ul>
-
+            <nav>
+                <ul>
+                    <li style="font-size: 20px;"><a href="./index.html">Home</a></li>
+                    <li style="font-size: 20px;"><a href="./about.html">About</a></li>
+                    <li style="font-size: 20px;"><a href="./sites.html">Links</a></li> 
+                </ul>
+                </nav>
 
 </body>
 </html>
