--- a/More than one site/index.html
+++ b/More than one site/index.html
@@ -21,11 +21,13 @@ font-size: 60px
 </style>
 <body>
     <header style="color:white" >Free Movie links</header>
+    <nav>
     <ul>
         <li style="font-size: 20px;"><a href="./index.html">Home</a></li>
         <li style="font-size: 20px;"><a href="./about.html">About</a></li>
         <li style="font-size: 20px;"><a href="./sites.html">Links</a></li> 
     </ul>
+    </nav>
 
 <p style="font-size:30px;"> <strong> Why are movies important?</strong> </p>
 <ul>
