--- a/More than one site/sites.html
+++ b/More than one site/sites.html
@@ -21,11 +21,13 @@
 <body>
 
     <header style="color:white" >Movie Links</header>
-    <ul>
-        <li style="font-size: 20px;"><a href="./index.html">Home</a></li>
-        <li style="font-size: 20px;"><a href="./about.html">About</a></li>
-        <li style="font-size: 20px;"><a href="./sites.html">Links</a></li>        
-    </ul>
+    <nav>
+        <ul>
+            <li style="font-size: 20px;"><a href="./index.html">Home</a></li>
+            <li style="font-size: 20px;"><a href="./about.html">About</a></li>
+            <li style="font-size: 20px;"><a href="./sites.html">Links</a></li> 
+        </ul>
+        </nav>
 
     <p style="font-size:30px; color: rgb(205, 241, 241); text-align: center;"><u><strong>Here are some Movies </strong></u> </p>
     
