--- a/Webpage/about.html
+++ b/Webpage/about.html
@@ -25,7 +25,7 @@
             <header style="color:white" >About Our page</header>
     <p style="text-align: center;">
 
-        <a href="./index.html" style="font-size: 20px;">Home</a>
+        <a href="../index.html" style="font-size: 20px;">Home</a>
         &nbsp; &nbsp; &nbsp; &nbsp; <a href="./about.html" style="font-size: 20px;">About</a>
         &nbsp; &nbsp; &nbsp; &nbsp; <a href="./sites.html" style="font-size: 20px;">Links</a>
             
