--- a/Webpage/sites.html
+++ b/Webpage/sites.html
@@ -28,7 +28,7 @@
 
     <p style="text-align: center;">
 
-        <a href="./index.html" style="font-size: 20px;">Home</a>
+        <a href="../index.html" style="font-size: 20px;">Home</a>
         &nbsp; &nbsp; &nbsp; &nbsp; <a href="./about.html" style="font-size: 20px;">About</a>
         &nbsp; &nbsp; &nbsp; &nbsp; <a href="./sites.html" style="font-size: 20px;">Links</a>
         
