--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ font-size: 60px
 <p style="text-align: center;">
 
     <a href="./index.html" style="font-size: 20px;">Home</a>
-    &nbsp; &nbsp; &nbsp; &nbsp; <a href="./about.html" style="font-size: 20px;">About</a>
-    &nbsp; &nbsp; &nbsp; &nbsp; <a href="./sites.html" style="font-size: 20px;">Links</a>
+    &nbsp; &nbsp; &nbsp; &nbsp; <a href="Webpage/about.html" style="font-size: 20px;">About</a>
+    &nbsp; &nbsp; &nbsp; &nbsp; <a href="Webpage/sites.html" style="font-size: 20px;">Links</a>
     
 </p>
 
