--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <style>
 body{
-background-image: url("film.jpg");
+background-image: url("./Webpage/film.jpg");
 background-repeat: no-repeat;
 background-size: cover;
 }
@@ -36,9 +36,9 @@ font-size: 60px
 
     <p style="text-align: center;">
 
-        <a href="Mailto:amjadmhasnain@gmail.com"><img src="gmail.png" alt="" width="35" height="20" ></a>      
-        &nbsp; <a href="https://www.instagram.com/firdousyy/"> <img src="insta.png" alt="" width="30" height="30"></a>
-        &nbsp;<a href="https://github.com/MohammadHasnain"><img src="github.png" alt="" width="30" height="30"></a>
+        <a href="Mailto:amjadmhasnain@gmail.com"><img src="./Webpage/gmail.png" alt="Gmail" width="35" height="20" ></a>      
+        &nbsp; <a href="https://www.instagram.com/firdousyy/"> <img src="./Webpage/insta.png" alt="Instagram" width="30" height="30"></a>
+        &nbsp;<a href="https://github.com/MohammadHasnain"><img src="./Webpage/github.png" alt="Github" width="30" height="30"></a>
 
     </p>
        
